@@ -1,10 +1,7 @@
 package liquibase.change;
 
-import javafx.scene.layout.Priority;
 import liquibase.Scope;
 import liquibase.exception.UnexpectedLiquibaseException;
-import liquibase.logging.LogService;
-import liquibase.logging.Logger;
 import liquibase.plugin.AbstractPluginFactory;
 import liquibase.plugin.Plugin;
 import liquibase.servicelocator.ServiceLocator;
@@ -23,14 +20,8 @@ public class ChangeFactory extends AbstractPluginFactory<Change>{
 
     private Map<Class<? extends Change>, ChangeMetaData> metaDataByClass = new ConcurrentHashMap<>();
 
-    private Logger log;
-
     private ChangeFactory() {
-      log = LogService.getLog(getClass());
-    }
 
-    protected Logger getLogger() {
-      return log;
     }
 
     @Override
@@ -97,7 +88,7 @@ public class ChangeFactory extends AbstractPluginFactory<Change>{
             return null;
         }
         try {
-            return plugin.getClass().newInstance();
+            return plugin.getClass().getConstructor().newInstance();
         } catch (Exception e) {
             throw new UnexpectedLiquibaseException(e);
         }
@@ -116,8 +107,10 @@ public class ChangeFactory extends AbstractPluginFactory<Change>{
         return returnMap;
     }
 
-    // exposed for test only
-    protected void setLogger(Logger mockLogger) {
-      log = mockLogger;
+    /**
+     * @deprecated Use {@link liquibase.Scope#getSingleton(Class)}
+     */
+    public static ChangeFactory getInstance() {
+        return Scope.getCurrentScope().getSingleton(ChangeFactory.class);
     }
 }
