@@ -58,7 +58,7 @@ public class DiffGeneratorFactory {
         }
 
         try {
-            return foundGenerators.iterator().next().getClass().newInstance();
+            return foundGenerators.iterator().next().getClass().getConstructor().newInstance();
         } catch (Exception e) {
             throw new UnexpectedLiquibaseException(e);
         }
@@ -84,6 +84,15 @@ public class DiffGeneratorFactory {
 
     public DiffResult compare(DatabaseSnapshot referenceSnapshot, DatabaseSnapshot comparisonSnapshot, CompareControl compareControl) throws DatabaseException {
         Database referenceDatabase = referenceSnapshot.getDatabase();
+        if (comparisonSnapshot !=null && referenceDatabase!=null) {
+            if (referenceDatabase.getDefaultCatalogName() == null || referenceDatabase.getDefaultCatalogName().isEmpty()) {
+                referenceDatabase.setDefaultCatalogName(comparisonSnapshot.getDatabase().getDefaultCatalogName());
+            }
+            if (referenceDatabase.getDefaultSchemaName() == null || referenceDatabase.getDefaultSchemaName().isEmpty()) {
+                referenceDatabase.setDefaultSchemaName(comparisonSnapshot.getDatabase().getDefaultSchemaName());
+            }
+
+        }
         Database comparisonDatabase;
         if (comparisonSnapshot == null) {
             comparisonDatabase = referenceSnapshot.getDatabase();
