@@ -21,7 +21,6 @@ import org.yaml.snakeyaml.representer.Represent;
 import org.yaml.snakeyaml.representer.Representer;
 import org.yaml.snakeyaml.resolver.Resolver;
 
-import java.beans.IntrospectionException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 import java.util.*;
@@ -78,12 +77,16 @@ public abstract class YamlSerializer implements LiquibaseSerializer {
         }
     }
 
+    protected Set<String> getSerializableObjectFields(LiquibaseSerializable object) {
+        return object.getSerializableFields();
+    }
+
     protected Object toMap(LiquibaseSerializable object) {
         Comparator<String> comparator;
         comparator = getComparator(object);
         Map<String, Object> objectMap = new TreeMap<>(comparator);
 
-        for (String field : object.getSerializableFields()) {
+        for (String field : getSerializableObjectFields(object)) {
             Object value = object.getSerializableFieldValue(field);
             if (value != null) {
                 if (value instanceof DataType) {
@@ -105,7 +108,8 @@ public abstract class YamlSerializer implements LiquibaseSerializer {
                     }
                     for (int i = 0; i < valueAsList.size(); i++) {
                         if (valueAsList.get(i) instanceof LiquibaseSerializable) {
-                            valueAsList.set(i, toMap((LiquibaseSerializable) valueAsList.get(i)));
+                            Object m = convertToMap(valueAsList, i);
+                            valueAsList.set(i, m);
                         }
                     }
                     value = valueAsList;
@@ -116,8 +120,12 @@ public abstract class YamlSerializer implements LiquibaseSerializer {
                         continue;
                     }
 
-                    for (Object key : ((Map) value).keySet()) {
+                    for (Object key : new HashSet<>(((Map) value).keySet())) {
                         Object mapValue = ((Map) value).get(key);
+                        if (mapValue == null) {
+                            ((Map) value).remove(key);
+                        }
+
                         if (mapValue instanceof LiquibaseSerializable) {
                             ((Map) value).put(key, toMap((LiquibaseSerializable) mapValue));
                         } else if (mapValue instanceof Collection) {
@@ -145,6 +153,10 @@ public abstract class YamlSerializer implements LiquibaseSerializer {
         return containerMap;
     }
 
+    protected Object convertToMap(List valueAsList, int index) {
+        return toMap((LiquibaseSerializable) valueAsList.get(index));
+    }
+
     protected Comparator<String> getComparator(LiquibaseSerializable object) {
         return new Comparator<String>() {
             @Override
@@ -155,14 +167,12 @@ public abstract class YamlSerializer implements LiquibaseSerializer {
     }
 
     private String removeClassTypeMarksFromSerializedJson(String json) {
-        json = json.replaceAll("!!int \"(\\d+)\"", "$1");
+        // Handle both negative and positive numbers
+        json = json.replaceAll("!!int \"(-?\\d+)\"", "$1");
         json = json.replaceAll("!!bool \"(\\w+)\"", "$1");
         json = json.replaceAll("!!timestamp \"([^\"]*)\"", "$1");
         json = json.replaceAll("!!float \"([^\"]*)\"", "$1");
         json = json.replaceAll("!!liquibase.[^\\s]+ (\"\\w+\")", "$1");
-        if (json.contains("!!")) {
-            throw new IllegalStateException(String.format("Serialize failed. Illegal char on %s position: %s", json.indexOf("!!"), json));
-        }
         return json;
     }
 
@@ -186,11 +196,11 @@ public abstract class YamlSerializer implements LiquibaseSerializer {
                 if (type.equals(ChangeSet.class)) {
                     serialzableType = new ChangeSet("x", "y", false, false, null, null, null, null);
                 } else if (LiquibaseSerializable.class.isAssignableFrom(type)) {
-                    serialzableType = (LiquibaseSerializable) type.newInstance();
+                    serialzableType = (LiquibaseSerializable) type.getConstructor().newInstance();
                 } else {
                     return super.getProperties(type);
                 }
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (ReflectiveOperationException e) {
                 throw new UnexpectedLiquibaseException(e);
             }
             for (String property : serialzableType.getSerializableFields()) {
